# DJANGO_TEMPLATE

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  start_pre-commit.sh
.github/: rename_project.sh  template.yml
.github/workflows/: bump-version.yml  rename-project.yml
backend/backend/: settings.py
builds/local/: .env.local  docker-compose.yml  local.sh  runserver.sh
local_pre-commit/: post-commit  static_version.py
src/builds/local/: docker-compose.yml  runserver.sh
src/django_project/: README.md  last-update.txt  manage.py
src/django_project/django_project/: asgi.py  urls.py  wsgi.py  wsgi_production.py
src/django_project/django_project/settings/: _base.py  dev.py  staging.py
src/django_project/django_project/templates/: base.html  index.html
src/django_project/django_project/vite/: package-lock.json  package.json  vite.config.js
src/django_project/django_project/vite/src/: main.js
src/django_project/django_project/vite/src/scss/: style.scss
src/django_project/django_project/webpack/: package-lock.json  package.json  webpack.config.js
src/django_project/django_project/webpack/config/: webpack.common.js
src/django_project/django_project/webpack/src/: app.js  index.js  style.css
