[tool.commitizen]
version = "0.3.8"
version_files = [
    "pyproject.toml:version",
    "src/django_project/__version__.py",
]

[tool.poetry]
name = "django-template"
version = "0.3.8"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_template"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
pre-commit = "^3.0.3"
psycopg2-binary = "^2.9.6"
cookiecutter = "^2.1.1"


[tool.poetry.group.dev.dependencies]
commitizen = "^2.42.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
